<resources>
    <string name="app_name">LocalImage</string>
    <string name="save_your_image_in_a_new_way">Save your Image in a new way!</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="login">LogIn</string>
    <string name="add_image_button">Add Image Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin">Pin</string>
    <string name="add">Add</string>
    <string name="give_a_name">Give a name!</string>
</resources>