<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_icon"
        android:layout_marginTop="50sp"
        />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_your_image_in_a_new_way"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="30sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutMobile"
        style="@style/OutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_phone"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_mobile_number">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMobile"
            android:inputType="phone"
            android:paddingStart="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPin"
        style="@style/OutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_secure"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutMobile"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/pin">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPin"
            android:inputType="numberPassword"
            android:paddingStart="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/OutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/ic_secure"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPin"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/give_a_name">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:inputType="text"
            android:paddingStart="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName"
        android:backgroundTint="@color/maroon"
        app:cornerRadius="15sp"
        android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>